# Agentic-Web-Starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  simple_rag.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  questions.yml
.github/workflows/: ci.yml
app/: JWT_AUTH_AND_SQL_SETUP.md  exceptions.py  health.py  main.py  starter.py
app/agents/: base_agent.py  ingestion.py  response.py  retrieval_agent.py  retriever_agent.py  supervisor.py  supervisor_agent.py
app/config/: env_config.py  log_config.py  logger.py  qdrant.py  qdrant_config.py  rabbitmq_config.py  redis.py  redis_config.py
app/constants/: app_constants.py
app/exceptions/: __init__.py  domain.py  handlers.py
app/llms/: gemini_chat_client.py  llm_factory.py  openai_chat_client.py
app/model/: qdrant.py  redis.py
app/models/: __init__.py  component_model.py  entities.py  role_model.py  sql_models.py  user_model.py
app/prompts/: retrieval_prompt.py  retrieving_prompt.py  supervisor_prompt.py
app/repository/: __init__.py  acl_repository.py  component_repository.py  (+4 more)
docs/: PR_GUIDELINES.md  api-reference.md  architecture.md  authentication-and-iam.md  configuration.md  contributing.md  getting-started.md  intro.md  pull-request-guidelines.md
qdrant_storage/: raft_state.json
src/: main.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
(+154 files in other folders)
