[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-template"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.128.0",
    "langchain==0.2.17",
    "langchain-community==0.2.19",
    "langchain-openai==0.1.21",
    "langchain_huggingface==0.0.3",
    "langchain_qdrant==0.1.3",
    "langchain_text_splitters>=0.2.0,<0.3.0",
    "pymupdf==1.25.2",
    "pypdf==5.1.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.9",
    "qdrant_client==1.16.2",
    "redis==5.0.8",
    "aio-pika==9.5.8",
    "gunicorn==23.0.0",
    "uvicorn==0.40.0",
    "PyJWT==2.11.0",
    "passlib[argon2]",
    "langchain-google-genai==1.0.8",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "isort==5.13.2",
    "ruff==0.8.4",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "pytest==9.0.2",
    "httpx==0.28.1",
]

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["temp*"]
